--- a/src/main/webapp/scss/main.scss
+++ b/src/main/webapp/scss/main.scss
@@ -22,7 +22,7 @@ $nml-menu-font-color: #c2c2c2;
 $alc-dark-contrast: #0b0805;
 $alc-bright-contrast: #ffffff;
 $alc-accent: #f9d246;
-$alc-accent-variant: #ebc532;
+$alc-accent-variant: #080808;
 $alc-font-color: #ab9f82;
 
 $alc-album-cover-stripe-color: $alc-accent-variant;
